# lib/api-spec/openapi.yaml
@@ -525,6 +525,10 @@ components:
           type: integer
         weeklyAverageStandingMinutes:
           type: integer
+        weeklyWalkingMinutes:
+          type: integer
+        weeklyAverageWalkingMinutes:
+          type: integer
         bestDayDate:
           type: string
           nullable: true
@@ -551,6 +555,8 @@ components:
         - currentStreak
         - longestStreak
         - weeklyAverageStandingMinutes
+        - weeklyWalkingMinutes
+        - weeklyAverageWalkingMinutes
         - bestDayDate
         - bestDayMinutes
         - worstDayDate
